<resources>
    <string name="app_name">Songly</string>
    <string name="visualizer">VISUALIZER</string>
    <string name="songly">SONGLY</string>
    <string name="studio">STUDIO</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="select_song">Select Song</string>
    <string name="more_bars">More Bars</string>
    <string name="less_bars">Less Bars</string>
    <string name="more_gap">More Gap</string>
    <string name="less_gap">Less Gap</string>
    <string name="bar">BAR</string>
    <string name="circle">CIRCLE</string>
    <string name="line">LINE</string>
</resources>
